# product-management-system

./: .gitignore  README.md  alembic.ini  crud.py  main.py  pyproject.toml  requirements.txt  routers.py  schemas.py
db/: database.py  models.py  utils.py
migrations/versions/: 728216ea911a_first.py
