[tool.poetry]
name = "product-management-system"
version = "0.1.0"
description = ""
authors = ["Denis Komandyr <sabsdaid@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.2"
uvicorn = {extras = ["standart"], version = "^0.27.1"}

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
